--- a/.github/workflows/pr_workflow.yml
+++ b/.github/workflows/pr_workflow.yml
@@ -7,31 +7,26 @@ on:
 
 jobs:
   # Runs the linter
-  golangci:
-    name: lint
+  PR:
+    name: PR
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
           go-version: '1.17'
-      - run: go version
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'npm'
+          cache-dependency-path: web/trivia-ui/package-lock.json
+      - run: make build-ui
       - name: vet
         run: go vet ./...
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v3.1.0
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: v1.43
-
-  unit-tests:
-    name: unit-tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '1.17'
       - name: Unit Tests
         run: |
           make test-ci
@@ -40,15 +35,6 @@ jobs:
         uses: guyarb/golang-test-annoations@v0.3.0
         with:
           test-results: unit-test.json
-  
-  build:
-    name: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '1.17'
       - name: Build
         run: |
-          make build
+          make build-full
