--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,27 @@ unit-test.json
 
 # Binary directory
 .build
+
+# dependencies
+web/trivia-ui/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+internal/web/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
