--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,16 +4,38 @@ on:
   push:
     branches: [main]
 
-  workflow_dispatch:
-
 jobs:
-  release:
+  releases-matrix:
+    name: Release Go Binary
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        goos: [linux, windows, darwin]
+        goarch: [amd64, arm64]
+  tag:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'npm'
+          cache-dependency-path: web/trivia-ui/package-lock.json
+      - name: Set APP_VERSION env
+        run: echo APP_VERSION=$(echo ${GITHUB_REF} | rev | cut -d'/' -f 1 | rev ) >> ${GITHUB_ENV}
+      - name: Set BUILD_TIME env
+        run: echo BUILD_TIME=$(date) >> ${GITHUB_ENV}
+      - run: make build-ui
       - uses: go-semantic-release/action@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           allow-initial-development-versions: true
           force-bump-patch-version: true
+      - uses: wangyoucao577/go-release-action@v1.22
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          goversion: "https://dl.google.com/go/go1.17.1.linux-amd64.tar.gz"
+          binary_name: "birthdaytrivia"
+          extra_files: LICENSE README.md
+          ldflags: -X 'github.com/mimatache/birthdaytrivia/info.appName=cyscale-cli' -X 'github.com/mimatache/birthdaytrivia/info.Version=${{ env.APP_VERSION }}' -X 'github.com/mimatache/birthdaytrivia/info.buildDate=${{ env.BUILD_TIME }}' -X 'github.com/mimatache/birthdaytrivia/info.commitHash=${{ github.sha }}'
