--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,15 +5,13 @@ on:
     branches: [main]
 
 jobs:
-  releases-matrix:
+  release:
     name: Release Go Binary
     runs-on: ubuntu-latest
     strategy:
       matrix:
         goos: [linux, windows, darwin]
         goarch: [amd64, arm64]
-  tag:
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
