--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
           force-bump-patch-version: true
   artifacts:
     name: Build Go Binary
+    needs: tag
     runs-on: ubuntu-latest
     strategy:
       matrix:
