--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,5 +14,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: go-semantic-release/action@v1
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           allow-initial-development-versions: true
           force-bump-patch-version: true
